# Jojo-Run

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  EmeraldEnemy.cpp  EmeraldEnemy.h  Enemy.h  Factory.cpp  Factory.h  FireWall.h  HamonEnemy.cpp  Observer.h  README.md  Shield.cpp  Subject.h
Assets/Config/: Credits.txt
CMake/: FindSFML.cmake
Src/: AbsGameState.cpp  AbsGameState.h  AnimationManager.cpp  AnimationManager.h  Animator.cpp  Animator.h  Background.cpp  Background.h  Block.cpp  Block.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  Emerald.cpp  Emerald.h  EmeraldEnemy.cpp  EmeraldEnemy.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Factory.cpp  Factory.h  Fire.cpp  Fire.h  FireBall.cpp  FireBall.h  FireEnemy.cpp  FireEnemy.h  FireWall.cpp  FireWall.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameObject.cpp  GameObject.h  GameOverState.cpp  (+58 more)
Src/Entities/: Background.cpp  Background.h  Block.cpp  Block.h  Bullet.h  CMakeLists.txt  Emerald.cpp  Emerald.h  EmeraldEnemy.cpp  EmeraldEnemy.h  Enemy.cpp  Enemy.h  Fire.cpp  Fire.h  FireBall.cpp  FireBall.h  FireEnemy.cpp  FireEnemy.h  HamonEnemy.cpp  HamonEnemy.h  Hero.cpp  Hero.h  Knife.cpp  Knife.h  Obstacle.h  Platform.cpp  Platform.h  PowerUp.h  Shield.cpp  Shield.h  Weapon.cpp  Weapon.h
Src/StateMachine/: AbsGameState.cpp  AbsGameState.h  CMakeLists.txt  GameOverState.cpp  GameOverState.h  GameStateMachine.h  InitState.cpp  InitState.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h
Src/Widgets/: CMakeLists.txt  ImageWidget.cpp  ImageWidget.h  ShapeWidget.cpp  ShapeWidget.h  TextWidget.cpp  TextWidget.h  Widget.cpp  Widget.h
Test/: BlockTest.cpp  CMakeLists.txt  CollisionManagerTest.cpp  CollisionTest.cpp  EntitiesTest.cpp  EntityTest.cpp  GameFixture.cpp  InputManagerTest.cpp  InputTest.cpp  MapFixture.cpp  ResourcesManagerTest.cpp  ResourcesTest.cpp  SceneManagerTest.cpp  SceneTest.cpp  ScoreManagerTest.cpp  TestGameConfig.cpp  TestGameConfig.h  TestSceneManager.cpp  TestSceneManager.h  WidgetTest.cpp  WidgetsTest.cpp
Test/Mock/: MockGameConfig.cpp  MockGameConfig.h  MockSceneManager.cpp  MockSceneManager.h
Test/TestAssets/Config/: Credits.txt
Test/googletest/: CMakeLists.txt  README.md
Test/googletest/cmake/: Config.cmake.in  internal_utils.cmake
Test/googletest/docs/: advanced.md  faq.md  pkgconfig.md  primer.md  samples.md
Test/googletest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-typed-test.h  gtest.h
Test/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util.h  gtest-port.h
Test/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
Test/googletest/test/: googletest-output-test-golden-lin.txt
